--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { 
+    font-family: 'Poppins', sans-serif;
+    height: 100%;
+}
+h5 {
+    font-family: 'Poppins', sans-serif;
+}
+
